maze.lessons.maze.island.IslandMaze.scala.error
Escaper:15: error: missing arguments for method setDirection in class AbstractBuggle;
follow this method with `_' if you want to treat it as a partially applied function
          setDirection.NORTH
          ^Escaper:19: error: missing arguments for method setDirection in class AbstractBuggle;
follow this method with `_' if you want to treat it as a partially applied function
        setDirection.NORTH
        ^