maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
  while (!estSurBiscuit){
    var obstacle=false
    if(estFaceMur){
      droite()
      if(estFaceMur){
        droite()
        avance()
        gauche()
        if (estFaceMur){
          droite()
        }else{
          avance()
          setDirection.NORTH
        }
      }else{
        avance()
        setDirection.NORTH
      }
    }else{
      while(obstacle==false){
      	avance()
      }
    }
  }
  prendBiscuit()
}